--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                     </div>
                 </li>
                 <li><a href="#pricing">Pricing</a></li>
+                <li><a href="promotions.html" style="color: #059669; font-weight: 600;">February Special ✨</a></li>
+<li><a href="faq.html">FAQ</a></li>
                 <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="index-es.html" class="language-toggle">Español</a></li>
@@ -290,6 +292,12 @@
                     </div>
                     <p style="color: #6b7280; text-align: center; font-size: 0.85rem; margin-top: 1rem;">Enrollment fee: $50 per person (family max $100)</p>
                 </div>
+                    <!-- February Promo Banner -->
+<div style="background: linear-gradient(135deg, #059669 0%, #047857 100%); color: white; padding: 1.5rem; border-radius: 0.75rem; margin-top: 1rem; text-align: center;">
+    <p style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">🎉 February New Member Special</p>
+    <p style="font-size: 0.95rem; margin-bottom: 1rem; opacity: 0.95;">Join with a Complete Membership in February and receive a FREE Advanced Insight Lab Panel!</p>
+    <a href="promotions.html" style="display: inline-block; background: white; color: #059669; padding: 0.6rem 1.5rem; border-radius: 0.5rem; font-weight: 600; text-decoration: none;">Learn More →</a>
+</div>
 
                 <!-- Access Membership -->
                 <div style="background: white; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); border-top: 8px solid #0ea5e9;">
