--- a/index-es.html
+++ b/index-es.html
@@ -41,6 +41,8 @@
                     </div>
                 </li>
                 <li><a href="#pricing">Precios</a></li>
+                <li><a href="promotions-es.html" style="color: #059669; font-weight: 600;">Especial de Febrero ✨</a></li>
+<li><a href="faq-es.html">Preguntas Frecuentes</a></li>
                 <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="#contact">Contacto</a></li>
                 <li><a href="index.html" class="language-toggle">English</a></li>
@@ -235,6 +237,12 @@
                     </div>
                     <p style="color: #6b7280; text-align: center; font-size: 0.85rem;">Tarifa de inscripción: $50 por persona (máximo familiar $100)</p>
                 </div>
+                <!-- February Promo Banner -->
+<div style="background: linear-gradient(135deg, #059669 0%, #047857 100%); color: white; padding: 1.5rem; border-radius: 0.75rem; margin-top: 1rem; text-align: center;">
+    <p style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">🎉 Especial de Febrero para Nuevos Miembros</p>
+    <p style="font-size: 0.95rem; margin-bottom: 1rem; opacity: 0.95;">¡Únase con una Membresía Complete en febrero y reciba un Panel de Laboratorio Advanced Insight GRATIS!</p>
+    <a href="promotions-es.html" style="display: inline-block; background: white; color: #059669; padding: 0.6rem 1.5rem; border-radius: 0.5rem; font-weight: 600; text-decoration: none;">Más Información →</a>
+</div>
 
                 <!-- Membresía Access -->
                 <div style="background: white; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); border-top: 8px solid #0ea5e9;">
