--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 
                 <div class="contact-box">
                     <div style="margin-bottom: 1rem;">
-                        <img src="healthhouse-logo.png" alt="Health House The Collaborative" style="height: 120px; width: auto; object-fit: contain; display: block; margin: 0 auto;">
+                        <img src="health-house-logo.png" alt="Health House The Collaborative" style="height: 120px; width: auto; object-fit: contain; display: block; margin: 0 auto;">
                     </div>
                     <h3>Located Within</h3>
                     <p style="color: #6b7280; font-size: 0.875rem; margin-bottom: 0.5rem;">Multi-specialty wellness center</p>
