--- a/promotions-es.html
+++ b/promotions-es.html
@@ -306,7 +306,7 @@
                 <li><a href="index-es.html">Inicio</a></li>
                 <li><a href="about-es.html">Acerca de</a></li>
                 <li class="dropdown">
-                    <a href="services-es.html" class="dropbtn">Servicios ▼</a>
+                    <a href="services-es.html" class="dropbtn">Servicios ›</a>
                     <div class="dropdown-content">
                         <a href="dpc-services-es.html">Atención Primaria Directa</a>
                         <a href="specialty-testing-es.html">Pruebas Especializadas</a>
