--- a/promotions.html
+++ b/promotions.html
@@ -306,7 +306,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li class="dropdown">
-                    <a href="services.html" class="dropbtn">Services ▼</a>
+                    <a href="services.html" class="dropbtn">Services ›</a>
                     <div class="dropdown-content">
                         <a href="dpc-services.html">Direct Primary Care</a>
                         <a href="specialty-testing.html">Specialty Testing</a>
