--- a/index-es.html
+++ b/index-es.html
@@ -46,7 +46,7 @@
                 <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="#contact">Contacto</a></li>
                 <li><a href="index.html" class="language-toggle">English</a></li>
-                <li><a href="https://www.staywellforlife.com/portal" target="_blank" class="btn-join">PORTAL</a></li>
+                <li><a href="https://staywellforlife.hint.com/login/request" target="_blank" class="btn-join">PORTAL</a></li>
             </ul>
         </div>
     </nav>
