--- a/gaht-membership-es.html
+++ b/gaht-membership-es.html
@@ -40,10 +40,9 @@
                     </div>
                 </li>
                 <li><a href="index-es.html#pricing">Precios</a></li>
-                <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="index-es.html#contact">Contacto</a></li>
                 <li><a href="gaht-membership.html" class="language-toggle">English</a></li>
-                <li><a href="https://www.staywellforlife.com/portal" target="_blank" class="btn-join">PORTAL</a></li>
+                <li><a href="https://staywellforlife.hint.com/login/request" target="_blank" class="btn-join">PORTAL</a></li>
             </ul>
         </div>
     </nav>
