--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -41,10 +41,9 @@
                     </div>
                 </li>
                 <li><a href="index.html#pricing">Pricing</a></li>
-                <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><a href="index-es.html" class="language-toggle">Español</a></li>
-                <li><a href="https://www.staywellforlife.com/portal" target="_blank" class="btn-join">PORTAL</a></li>
+                <li><a href="https://staywellforlife.hint.com/login/request" target="_blank" class="btn-join">PORTAL</a></li>
             </ul>
         </div>
     </nav>
@@ -203,7 +202,6 @@
                         <li style="margin-bottom: 0.5rem;"><a href="about.html" style="color: #9ca3af; text-decoration: none;">About</a></li>
                         <li style="margin-bottom: 0.5rem;"><a href="services.html" style="color: #9ca3af; text-decoration: none;">Services</a></li>
                         <li style="margin-bottom: 0.5rem;"><a href="index.html#pricing" style="color: #9ca3af; text-decoration: none;">Pricing</a></li>
-                        <li style="margin-bottom: 0.5rem;"><a href="https://www.staywellforlife.com/blog" style="color: #9ca3af; text-decoration: none;">Blog</a></li>
                         <li style="margin-bottom: 0.5rem;"><a href="privacy-policy.html" style="color: #9ca3af; text-decoration: none;">Privacy Policy</a></li>
                     </ul>
                 </div>
