--- a/aesthetics.html
+++ b/aesthetics.html
@@ -41,10 +41,9 @@
                     </div>
                 </li>
                 <li><a href="index.html#pricing">Pricing</a></li>
-                <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><a href="aesthetics-es.html" class="language-toggle">Español</a></li>
-                <li><a href="https://www.staywellforlife.com/portal" target="_blank" class="btn-join">PORTAL</a></li>
+                <li><a href="https://staywellforlife.hint.com/login/request" target="_blank" class="btn-join">PORTAL</a></li>
             </ul>
         </div>
     </nav>
