--- a/promotions-es.html
+++ b/promotions-es.html
@@ -316,10 +316,9 @@
                 </li>
                 <li><a href="index-es.html#pricing">Precios</a></li>
                 <li><a href="promotions-es.html" style="color: #059669; font-weight: 600;">Especial de Febrero ✨</a></li>
-                <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="index-es.html#contact">Contacto</a></li>
                 <li><a href="index.html" class="language-toggle">English</a></li>
-                <li><a href="https://www.staywellforlife.com/portal" target="_blank" class="btn-join">PORTAL</a></li>
+                <li><a href="https://staywellforlife.hint.com/login/request" target="_blank" class="btn-join">PORTAL</a></li>
             </ul>
         </div>
     </nav>
