--- a/services-es.html
+++ b/services-es.html
@@ -41,10 +41,9 @@
                     </div>
                 </li>
                 <li><a href="index-es.html#pricing">Precios</a></li>
-                <li><a href="https://www.staywellforlife.com/blog" target="_blank">Blog</a></li>
                 <li><a href="index-es.html#contact">Contacto</a></li>
                 <li><a href="services.html" class="language-toggle">English</a></li>
-                <li><a href="https://www.staywellforlife.com/portal" target="_blank" class="btn-join">PORTAL</a></li>
+                <li><a href="https://staywellforlife.hint.com/login/request" target="_blank" class="btn-join">PORTAL</a></li>
             </ul>
         </div>
     </nav>
