--- a/faq-es.html
+++ b/faq-es.html
@@ -428,7 +428,7 @@
             <h2>¿Todavía Tiene Preguntas?</h2>
             <p>Programe una consulta gratuita para conocer más sobre cómo Staywell Health puede funcionar para usted.</p>
             <div class="cta-buttons">
-                <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary">Programar Consulta Gratuita</a>
+                <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary">Programar Consulta Gratuita</a>
                 <a href="index-es.html#contact" class="btn-secondary">Contáctenos</a>
             </div>
         </div>
