--- a/faq.html
+++ b/faq.html
@@ -428,7 +428,7 @@
             <h2>Still Have Questions?</h2>
             <p>Schedule a free meet and greet to learn more about how Staywell Health can work for you.</p>
             <div class="cta-buttons">
-                <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary">Schedule Free Meet & Greet</a>
+                <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary">Schedule Free Meet & Greet</a>
                 <a href="index.html#contact" class="btn-secondary">Contact Us</a>
             </div>
         </div>
