--- a/index-es.html
+++ b/index-es.html
@@ -109,7 +109,7 @@
                     <p style="font-size: 1.125rem; margin-bottom: 1.5rem;">Con tiempos de cita extendidos y comunicación directa, construimos relaciones duraderas que llevan a mejores resultados de salud y una experiencia de atención más personalizada.</p>
                     <div class="hero-buttons" style="display: flex; gap: 1rem; flex-wrap: wrap;">
                         <a href="about-es.html" class="btn-secondary">Conoce Más Sobre Nuestro Enfoque</a>
-                        <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9;">Conoce al Médico (Gratis)</a>
+                        <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9;">Conoce al Médico (Gratis)</a>
                     </div>
                 </div>
             </div>
@@ -307,7 +307,7 @@
                 <div style="background: #f0f9ff; padding: 2rem; border-radius: 1rem; border: 2px dashed #0ea5e9; max-width: 600px; width: 100%;">
                     <h3 style="color: #0369a1; margin-bottom: 1rem;">¿Aún no estás listo para unirte?</h3>
                     <p style="color: #0c4a6e; margin-bottom: 1.5rem;">Reserva una reunión virtual gratuita de 15 minutos para ver si Staywell Health es la opción adecuada para ti.</p>
-                    <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9; font-size: 1.125rem; padding: 0.75rem 1.5rem;">Reserva Tu Cita Gratuita</a>
+                    <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9; font-size: 1.125rem; padding: 0.75rem 1.5rem;">Reserva Tu Cita Gratuita</a>
                 </div>
                 <div>
                     <a href="https://staywellforlife.hint.com/signup/membership" target="_blank" class="btn-primary" style="font-size: 1.25rem; padding: 1rem 2.5rem;">¡Únete Ahora!</a>
