--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <p style="font-size: 1.125rem; margin-bottom: 1.5rem;">With extended appointment times and direct communication, we build lasting relationships that lead to better health outcomes and a more personalized care experience.</p>
                     <div class="hero-buttons" style="display: flex; gap: 1rem; flex-wrap: wrap;">
                         <a href="about.html" class="btn-secondary">Learn More About Our Approach</a>
-                        <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9;">Free Virtual Meet & Greet</a>
+                        <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9;">Free Virtual Meet & Greet</a>
                     </div>
                 </div>
             </div>
@@ -353,7 +353,7 @@
                 <div style="background: #f0f9ff; padding: 2rem; border-radius: 1rem; border: 2px dashed #0ea5e9; max-width: 600px; width: 100%;">
                     <h3 style="color: #0369a1; margin-bottom: 1rem;">Not ready to join yet?</h3>
                     <p style="color: #0c4a6e; margin-bottom: 1.5rem;">Book a free 15-minute virtual meet and greet to see if Staywell Health is the right fit for you.</p>
-                    <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9; font-size: 1.125rem; padding: 0.75rem 1.5rem;">Book Free Meet & Greet</a>
+                    <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary" style="background-color: #0ea5e9; border-color: #0ea5e9; font-size: 1.125rem; padding: 0.75rem 1.5rem;">Book Free Meet & Greet</a>
                 </div>
                 <div>
                     <a href="https://staywellforlife.hint.com/signup/membership" target="_blank" class="btn-primary" style="font-size: 1.125rem; padding: 1rem 2rem;">Join Now</a>
