--- a/promotions-es.html
+++ b/promotions-es.html
@@ -437,7 +437,7 @@
             <h2>¿Listo para Comenzar?</h2>
             <p>Programe una consulta gratuita para conocer más sobre la membresía y esta oferta especial.</p>
             <div class="cta-buttons">
-                <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary">Programar Consulta Gratuita</a>
+                <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary">Programar Consulta Gratuita</a>
                 <a href="index-es.html#pricing" class="btn-secondary">Ver Opciones de Membresía</a>
             </div>
         </div>
