--- a/promotions.html
+++ b/promotions.html
@@ -436,7 +436,7 @@
             <h2>Ready to Get Started?</h2>
             <p>Schedule a free meet and greet to learn more about membership and this special offer.</p>
             <div class="cta-buttons">
-                <a href="https://staywellforlife.com/meet" target="_blank" class="btn-primary">Schedule Free Meet &amp; Greet</a>
+                <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-fc881b06ab392a22" target="_blank" class="btn-primary">Schedule Free Meet &amp; Greet</a>
                 <a href="index.html#pricing" class="btn-secondary">View Membership Options</a>
             </div>
         </div>
