--- a/aesthetics.html
+++ b/aesthetics.html
@@ -171,7 +171,7 @@
                 <h2>Ready to Look and Feel Your Best?</h2>
                 <p style="font-size: 1.125rem; color: #6b7280; margin-bottom: 2rem; max-width: 48rem; margin-left: auto; margin-right: auto;">Schedule a consultation to discuss your aesthetic goals and learn more about Xeomin treatments.</p>
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                    <a href="https://staywellforlife.hint.com/signup/xeomin-membership" target="_blank" class="btn-primary">Schedule Xeomin Consultation</a>
+                    <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-e60aff0d125010c2" target="_blank" class="btn-primary">Schedule Xeomin Consultation</a>
                     <a href="index.html#contact" class="btn-secondary">Contact Us</a>
                 </div>
             </div>
