--- a/aesthetics-es.html
+++ b/aesthetics-es.html
@@ -171,7 +171,7 @@
                 <h2>¿Listo para Verte y Sentirte Mejor?</h2>
                 <p style="font-size: 1.125rem; color: #6b7280; margin-bottom: 2rem; max-width: 48rem; margin-left: auto; margin-right: auto;">Programa una consulta para discutir tus objetivos estéticos y aprender más sobre los tratamientos de Xeomin.</p>
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                    <a href="https://staywellforlife.hint.com/signup/xeomin-membership" target="_blank" class="btn-primary">Programar Consulta de Xeomin</a>
+                    <a href="https://staywellforlife.hint.com/booking?appointment-type=appty-e60aff0d125010c2" target="_blank" class="btn-primary">Programar Consulta de Xeomin</a>
                     <a href="index-es.html#contact" class="btn-secondary">Contáctanos</a>
                 </div>
             </div>
